--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    v<h1>Vai ser uma imagem aqui</h1>
+    <h1>Vai ser uma imagem aqui</h1>
     <ul>
         <li>Estudante</li>
         <li>Escola</li>
